src/infrastructure/deployments/guardian/system/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-openbao-to-apiserver
  namespace: tenant-guardian
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: openbao
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-external-secrets-to-openbao
  namespace: tenant-guardian
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: openbao
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: external-secrets-operator
            app.kubernetes.io/name: external-secrets
            k8s:io.kubernetes.pod.namespace: cozy-external-secrets-operator
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-openbao-to-aws-kms
  namespace: tenant-guardian
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: openbao
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
